# kamer

./: LICENSE  pyproject.toml  setup.py
dev/: clean  env  rtfd  upenv
docs/: about.rst  conf.py  index.rst  manual.rst  requirements.txt  source.rst
kamer/: __init__.py  sui.py  ver.py  version.py
